<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding_top"
    tools:context="com.example.stanley.cgpacalculator.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_imageR"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:contentDescription="School Logo"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher_foreground" />

            <TextView
                android:id="@+id/wel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/login_to"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"

                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp" />

            <!--            <TextView-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:fontFamily="serif"-->
            <!--                android:text="@string/cgpa_calculator"-->
            <!--                android:textAlignment="center"-->
            <!--                android:textAppearance="@android:style/TextAppearance.DeviceDefault"-->
            <!--                android:textColor="@color/colorPrimaryDark"-->
            <!--                android:textSize="25sp"-->
            <!--                android:textStyle="bold" />-->

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/usn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textColor="@color/colorPrimaryDark"
                app:met_floatingLabel="normal" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/Upwd"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textColor="@color/colorPrimaryDark"
                app:met_floatingLabel="normal"
                app:met_minCharacters="6" />

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="Remember me"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/back4"
                android:fontFamily="serif"
                android:padding="10dp"
                android:text="@string/login"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textColor="#fff"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/f_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/regAct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="10dp"
                android:fontFamily="serif"
                android:text="@string/register"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
